--- a/style/style.css
+++ b/style/style.css
@@ -32,19 +32,69 @@
   font-size: 20px;
   font-weight: 800;
 }
-
-
-
+/* newsletter section style */
+.newsletter-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 25px;
+  padding: 100px 135px;
+}
+.newsletter-content {
+  border-radius: 16px;
+  border: 1px solid #ff5400;
+  padding: 40px;
+  margin: 20px 0;
+}
+.newsletter-title {
+  color: #131318;
+  font-size: 24px;
+  font-weight: 800;
+  margin-top: 0px;
+}
+.newsletter-text {
+  color: #5a5a5d;
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+.newsletter-input {
+  color: rgba(19, 19, 24, 0.3);
+  font-family: Mulish;
+  font-size: 16px;
+  font-weight: 400;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 20px;
+  padding-right: 150px;
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  border: none;
+  display: block;
+  margin: 20px 0;
+}
+.subscribe{
+    width: 100%;
+}
 
 
 /* responsive styles */
 @media screen and (max-width: 600px) {
-    .popular-tours-container{
-        flex-direction: column;
-        padding: 10px;
-        max-width: 100%;
-    }
-    .popular-tours-container img{
-        max-width: 100%;
-    }
+  .popular-tours-container , .newsletter-container {
+    flex-direction: column;
+    padding: 10px;
+    max-width: 100%;
+  }
+  .popular-tours-container img {
+    max-width: 100%;
+  }
+  .newsletter-container img {
+    max-width: 100%;
+  }
+  .newsletter-input , .newsletter-content {
+    max-width: 100%;
+    padding: 10px;
+  }
+  .subscribe{
+    width: 50%;
+  }
 }
