--- a/style/style.css
+++ b/style/style.css
@@ -75,6 +75,54 @@
 .subscribe {
   width: 100%;
 }
+/* Choose US section Style */
+.choose-us-container-title {
+  color: #131318;
+  font-size: 40px;
+  font-weight: 800;
+}
+.choose-us-container-description {
+  color: rgba(19, 19, 24, 0.7);
+  font-size: 16px;
+  font-weight: 400;
+}
+.choose-us-container-title,
+.choose-us-container-description {
+  text-align: center;
+}
+.choose-us-container-upper {
+  display: flex;
+  /* justify-content: space-between; */
+  padding: 40px 135px;
+  gap: 25px;
+}
+.hotels {
+  border-radius: 16px;
+  border: 1px solid rgba(251, 181, 99, 0.2);
+  background: rgba(251, 181, 99, 0.05);
+  padding: 40px;
+  height: 250px;
+}
+.service {
+  border-radius: 16px;
+  border: 1px solid rgba(41, 206, 246, 0.2);
+  background: rgba(41, 206, 246, 0.05);
+  padding: 40px;
+  height: 250px;
+}
+.price {
+  border-radius: 16px;
+  border: 1px solid rgba(233, 68, 68, 0.2);
+  background: rgba(233, 68, 68, 0.05);
+  padding: 40px;
+  /* margin: 0 400px; */
+  height: 250px;
+}
+.choose-us-container-down{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
 
 /* footer section style */
 .footer {
@@ -101,7 +149,7 @@
 /* responsive styles */
 @media screen and (max-width: 600px) {
   .popular-tours-container,
-  .newsletter-container {
+  .newsletter-container, .choose-us-container-upper {
     flex-direction: column;
     padding: 10px;
     max-width: 100%;
@@ -120,7 +168,7 @@
   .subscribe {
     width: 50%;
   }
-  .footer{
+  .footer {
     padding: 10px;
   }
 }
