--- a/style/style.css
+++ b/style/style.css
@@ -118,10 +118,10 @@
   /* margin: 0 400px; */
   height: 250px;
 }
-.choose-us-container-down{
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
+.choose-us-container-down {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 /* footer section style */
@@ -145,15 +145,114 @@
   font-size: 32px;
   font-weight: 800;
 }
+/* destination style */
+.destination-container-title {
+  color: #131318;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 800;
+}
+.destination-container-description {
+  color: rgba(19, 19, 24, 0.7);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+}
+.destination-img-container-1{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    padding: 0 135px;
+}
+.destination-img-container-1 img{
+    width: 98%;
+}
 
+.destination-img-container-2{
+    display: grid;
+    grid-template-columns:1fr 2fr 1fr;
+    padding: 0 135px;
+    margin-top: 10px;
+}
+.destination-img-container-2 img{
+ width: 98%;
+ height: 90%;
+}
+.destination-img-container-3 {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    padding: 0 135px; 
+    /* height: 100%; */
+}
+.destination-img-container-3 img{
+    width: 98%;
+    height: 90%;
+}
+/* ----------------------- */
+/* .destination-img-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(3,1fr);
+  padding: 0 135px;
+  gap: 15px ;
+}
+
+.destination-img-1{
+    grid-column: 1/span 6;
+    grid-row: 1/span 1;
+}
+.destination-img-2{
+    grid-column: 7/span 12;
+    grid-row: 1/span 1;
+}
+.destination-img-3{
+    grid-column: 1/span 4;
+    grid-row: 2/span 1;
+}
+.destination-img-4{
+    grid-column: 5/span 6 ;
+    grid-row: 2/span 1;
+}
+.destination-img-5{
+    grid-column: 11/span 6 ;
+    grid-row: 2/span 1;
+}
+.destination-img-6{
+    grid-column: 1/span 4 ;
+    grid-row: 3/span 1;
+}
+.destination-img-7{
+    grid-column: 5/span 10 ;
+    grid-row: 3/span 1;
+}
+.destination-img-container img{
+    width: 100%;
+    height: 100%;
+} */
+/* ------------------------- */
 /* responsive styles */
 @media screen and (max-width: 600px) {
   .popular-tours-container,
-  .newsletter-container, .choose-us-container-upper {
+  .newsletter-container,
+  .choose-us-container-upper {
     flex-direction: column;
     padding: 10px;
     max-width: 100%;
   }
+  .destination-img-container-1, .destination-img-container-2, .destination-img-container-3{
+    padding: 10px;
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+  
+  /* .destination-img-container{
+    padding: 10px;
+  } */
+  /* .destination-img-1,.destination-img-2,
+  .destination-img-3,.destination-img-4,
+  .destination-img-5,.destination-img-6,
+  .destination-img-7 {
+     
+  } */
   .popular-tours-container img {
     max-width: 100%;
   }
@@ -171,4 +270,5 @@
   .footer {
     padding: 10px;
   }
+
 }
