--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,62 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+.banner-section {
+  background-image: url("../Images/Group\ 13\ \(1\)\ \(1\).png");
+  background-repeat: no-repeat;
+  background-position: center;
+  object-fit: contain;
+  padding: 100px 135px;
+  border-radius: 16px;
+  height: 500px;
+  max-width: 100%;
+}
+.banner-section-title {
+  color: #fff;
+  font-size: 64px;
+  font-weight: 800;
+  text-align: center;
+  padding-top: 80px;
+}
+.banner-section-description {
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+}
+.banner-input {
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.3);
+  display: flex;
+  justify-content: center;
+  /* align-items: center;
+  text-align: center;
+  display: inline-flex;
+  justify-content: space-evenly;
+  padding: 16px;
+ margin-left: 400px;
+ padding-left: 50px;
+ padding-right: 50px;
+  gap: 24px; */
+}
+.input-field {
+  border-radius: 8px;
+  background: #fff;
+  border: none;
+  padding: 16px;
+  margin-right: 15px;
+  margin-top: 15px;
+}
+.banner-section-btn {
+  border-radius: 8px;
+  background: #ff5400;
+  padding: 16px 20px;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+}
 /* popular section style */
 .popular-tours-container {
   display: flex;
@@ -158,34 +214,34 @@
   font-size: 16px;
   font-weight: 400;
 }
-.destination-img-container-1{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    padding: 0 135px;
+.destination-img-container-1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 0 135px;
 }
-.destination-img-container-1 img{
-    width: 98%;
+.destination-img-container-1 img {
+  width: 98%;
 }
 
-.destination-img-container-2{
-    display: grid;
-    grid-template-columns:1fr 2fr 1fr;
-    padding: 0 135px;
-    margin-top: 10px;
+.destination-img-container-2 {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  padding: 0 135px;
+  margin-top: 10px;
 }
-.destination-img-container-2 img{
- width: 98%;
- height: 90%;
+.destination-img-container-2 img {
+  width: 98%;
+  height: 90%;
 }
 .destination-img-container-3 {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    padding: 0 135px; 
-    /* height: 100%; */
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  padding: 0 135px;
+  /* height: 100%; */
 }
-.destination-img-container-3 img{
-    width: 98%;
-    height: 90%;
+.destination-img-container-3 img {
+  width: 98%;
+  height: 90%;
 }
 
 /* responsive styles */
@@ -197,12 +253,31 @@
     padding: 10px;
     max-width: 100%;
   }
-  .destination-img-container-1, .destination-img-container-2, .destination-img-container-3{
+  /* ------------- */
+  .banner-section-title {
+    font-size: 30px;
+    width: 80%;
+  }
+  .banner-input{
+    flex-direction: column;
+  }
+  .input-field , .banner-section-btn{
+    max-width: 80%;
+    padding: 10px;
+  }
+  /* ----------- */
+  .banner-section {
+    height: auto;
+    padding: 10px;
+    
+  }
+  .destination-img-container-1,
+  .destination-img-container-2,
+  .destination-img-container-3 {
     padding: 10px;
     grid-template-columns: 1fr;
     gap: 15px;
   }
-  
 
   .popular-tours-container img {
     max-width: 100%;
@@ -221,5 +296,4 @@
   .footer {
     padding: 10px;
   }
-
 }
