--- a/style/style.css
+++ b/style/style.css
@@ -213,6 +213,7 @@
   text-align: center;
   font-size: 16px;
   font-weight: 400;
+  padding: 0 135px;
 }
 .destination-img-container-1 {
   display: grid;
@@ -284,6 +285,9 @@
   }
   .newsletter-container img {
     max-width: 100%;
+  }
+  .destination-container-title{
+    font-size: 30px;
   }
   .newsletter-input,
   .newsletter-content {
