--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,44 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+.company-name{
+  color: #131318;
+font-size: 36px;
+font-weight: 800;
+}
+.span-company{
+  color: #FF5400;
+font-size: 36px;
+font-weight: 800;
+}
+.nav-bar{
+  display: flex;
+  justify-content: space-between;
+  padding: 100px 135px;
+  padding-bottom: 0px;
+}
+.parent{
+display: flex;
+}
+.child{
+color: #fff;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+list-style: none;
+display: inline;
+margin-right: 25px;
+background-color: #FF5400;
+padding: 15px;
+border-radius: 10px;
+}
+.nav-left{
+  display: flex;
+  gap: 15px ;
+  align-items: center;
+  justify-content: center;
+}
+
 .banner-section {
   background-image: url("../Images/Group\ 13\ \(1\)\ \(1\).png");
   background-repeat: no-repeat;
@@ -13,7 +51,7 @@
   max-width: 100%;
 }
 .banner-section-title {
-  color: #fff;
+  color:#f1f1f1;
   font-size: 64px;
   font-weight: 800;
   text-align: center;
@@ -29,6 +67,9 @@
   border-radius: 8px;
   background: rgba(255, 255, 255, 0.3);
   display: flex;
+  justify-content: center;
+  padding: 16px;
+  text-align: center;
   justify-content: center;
   /* align-items: center;
   text-align: center;
@@ -51,7 +92,7 @@
 .banner-section-btn {
   border-radius: 8px;
   background: #ff5400;
-  padding: 16px 20px;
+  padding: 16px;
   color: #fff;
   text-align: center;
   font-size: 16px;
@@ -66,6 +107,7 @@
   /* need to check */
   padding: 100px 135px;
 }
+
 .popular-tours-title {
   color: #131318;
   font-size: 40px;
@@ -249,10 +291,26 @@
 @media screen and (max-width: 600px) {
   .popular-tours-container,
   .newsletter-container,
-  .choose-us-container-upper {
+  .choose-us-container-upper
+   {
     flex-direction: column;
     padding: 10px;
     max-width: 100%;
+  }
+  .parent, .nav-bar {
+    flex-direction: column;
+    padding: 10px;
+    max-width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  .child{
+    max-width: 50%;
+    margin: 0;
+      }
+  .nav-left{
+    flex-direction: column;
+    padding: 0;
   }
   /* ------------- */
   .banner-section-title {
@@ -272,6 +330,7 @@
     padding: 10px;
     
   }
+ 
   .destination-img-container-1,
   .destination-img-container-2,
   .destination-img-container-3 {
